# demon

./: CMakeLists.txt  MakeFile  test.sh
headers/: bool.h  config.h  file.h  filelist.h  filetype.h  help.h  parse.h  sync.h  timestamp.h
sources/: config.c  file.c  filelist.c  help.c  main.c  parse.c  sync.c  timestamp.c
